@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-* 
+* [jan] Fix Oracle compatibility (Bug #14262).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1629,7 +1629,7 @@
    <date>2016-02-02</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* 
+* [jan] Fix Oracle compatibility (Bug #14262).
    </notes>
   </release>
  </changelog>
