@@ -2,6 +2,7 @@
 v3.2.9-git
 ----------
 
+[jan] Fix Oracle compatibility (Bug #14262).
 
 
 ------
